Fix table width: remove 100% so columns don't stretch

--- a/website/src/pages/ArielHRPage.css
+++ b/website/src/pages/ArielHRPage.css
@@ -94,7 +94,6 @@
 }
 
 .hr-table {
-  width: 100%;
   table-layout: fixed;
   border-collapse: collapse;
   direction: rtl;
